# fractol

./: CMakeLists.txt  Makefile  author  fractol
incl/: fractol.h
src/: action.c  action2.c  draw_line.c  formulas.c  formulas2.c  formulas3.c  formulas4.c  fractol.c  mult.c  rotation.c
src/libft/: Makefile  ft_arrfree.c  ft_atoi.c  ft_bzero.c  ft_foreach.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstaddback.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_power.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_range.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+28 more)
src/libft/ft_printf/: extra_fun.c  find_flag.c  for_add.c  for_flags.c  for_p.c  ft_itoa_base.c  ft_itoa_base_int.c  ft_itoa_max.c  ft_itoa_unslong.c  ft_memcpy.c  ft_printf.c  ft_putchar.c  ft_putint.c  ft_putnbr.c  ft_putnumber.c  ft_putstr.c  ft_putstring.c  ft_putunsnbr.c  if_flags.c  if_flags_d.c  if_flags_ito.c  not_spec.c  number.c  specifier.c  unicode.c  valid.c
