cmake_minimum_required(VERSION 3.13)
project(fractol C)

set(CMAKE_C_STANDARD 11)

include_directories(.)

add_executable(fractol
        src/fractol.c
        incl/fractol.h
        src/rotation.c
        src/draw_line.c
        src/action.c
        src/mult.c
        src/formulas.c
        src/libft/ft_printf/extra_fun.c
        src/libft/ft_printf/find_flag.c
        src/libft/ft_printf/for_add.c
        src/libft/ft_printf/for_flags.c
        src/libft/ft_printf/for_p.c
        src/libft/ft_printf/ft_itoa_base.c
        src/libft/ft_printf/ft_itoa_base_int.c
        src/libft/ft_printf/ft_itoa_max.c
        src/libft/ft_printf/ft_itoa_unslong.c
        src/libft/ft_printf/ft_memcpy.c
        src/libft/ft_printf/ft_printf.c
        src/libft/ft_printf/ft_putchar.c
        src/libft/ft_printf/ft_putint.c
        src/libft/ft_printf/ft_putnbr.c
        src/libft/ft_printf/ft_putnumber.c
        src/libft/ft_printf/ft_putstr.c
        src/libft/ft_printf/ft_putstring.c
        src/libft/ft_printf/ft_putunsnbr.c
        src/libft/ft_printf/if_flags.c
        src/libft/ft_printf/if_flags_d.c
        src/libft/ft_printf/if_flags_ito.c
        src/libft/ft_printf/not_spec.c
        src/libft/ft_printf/number.c
        src/libft/ft_printf/specifier.c
        src/libft/ft_printf/unicode.c
        src/libft/ft_printf/valid.c
        src/libft/ft_arrfree.c
        src/libft/ft_atoi.c
        src/libft/ft_bzero.c
        src/libft/ft_foreach.c
        src/libft/ft_isalnum.c
        src/libft/ft_isalpha.c
        src/libft/ft_isascii.c
        src/libft/ft_isdigit.c
        src/libft/ft_isprint.c
        src/libft/ft_itoa.c
        src/libft/ft_lstadd.c
        src/libft/ft_lstaddback.c
        src/libft/ft_lstdel.c
        src/libft/ft_lstdelone.c
        src/libft/ft_lstiter.c
        src/libft/ft_lstmap.c
        src/libft/ft_lstnew.c
        src/libft/ft_memalloc.c
        src/libft/ft_memccpy.c
        src/libft/ft_memchr.c
        src/libft/ft_memcmp.c
        src/libft/ft_memcpy.c
        src/libft/ft_memdel.c
        src/libft/ft_memmove.c
        src/libft/ft_memset.c
        src/libft/ft_power.c
        src/libft/ft_putchar.c
        src/libft/ft_putchar_fd.c
        src/libft/ft_putendl.c
        src/libft/ft_putendl_fd.c
        src/libft/ft_putnbr.c
        src/libft/ft_putnbr_fd.c
        src/libft/ft_putstr.c
        src/libft/ft_putstr_fd.c
        src/libft/ft_range.c
        src/libft/ft_sqrt.c
        src/libft/ft_strcat.c
        src/libft/ft_strchr.c
        src/libft/ft_strclr.c
        src/libft/ft_strcmp.c
        src/libft/ft_strcpy.c
        src/libft/ft_strdel.c
        src/libft/ft_strdup.c
        src/libft/ft_strequ.c
        src/libft/ft_striter.c
        src/libft/ft_striteri.c
        src/libft/ft_strjoin.c
        src/libft/ft_strlcat.c
        src/libft/ft_strlen.c
        src/libft/ft_strmap.c
        src/libft/ft_strmapi.c
        src/libft/ft_strncat.c
        src/libft/ft_strncmp.c
        src/libft/ft_strncpy.c
        src/libft/ft_strnequ.c
        src/libft/ft_strnew.c
        src/libft/ft_strnstr.c
        src/libft/ft_strrchr.c
        src/libft/ft_strsplit.c
        src/libft/ft_strstr.c
        src/libft/ft_strsub.c
        src/libft/ft_strtrim.c
        src/libft/ft_swap.c
        src/libft/ft_tolower.c
        src/libft/ft_toupper.c
        src/libft/get_next_line.c
        src/libft/libft.h
)
